:heavy_plus_sign: (deps): Add @anthropic-ai/sdk package

--- a/package.json
+++ b/package.json
@@ -22,8 +22,9 @@
   },
   "homepage": "https://github.com/RomanHotsiy/commitgpt#readme",
   "dependencies": {
+    "@anthropic-ai/sdk": "^0.21.0",
     "enquirer": "^2.3.6",
-    "openai": "^3.2.1",
+    "openai": "^4.8.0",
     "ora": "^6.1.2",
     "uuid": "^9.0.0",
     "ws": "^8.12.1",
